@@ -15,16 +15,16 @@ import edu.colorado.phet.balancingchemicalequations.model.DecompositionEquation.
 import edu.colorado.phet.balancingchemicalequations.model.DecompositionEquation.Equation_C2H6_C2H4_H2;
 import edu.colorado.phet.balancingchemicalequations.model.DecompositionEquation.Equation_CH3OH_CO_2H2;
 import edu.colorado.phet.balancingchemicalequations.model.DecompositionEquation.Equation_PCl5_PCl3_Cl2;
-import edu.colorado.phet.balancingchemicalequations.model.TwoReactantsOneProductEquation.Equation_2C_O2_2CO;
-import edu.colorado.phet.balancingchemicalequations.model.TwoReactantsOneProductEquation.Equation_2H2_O2_2H2O;
-import edu.colorado.phet.balancingchemicalequations.model.TwoReactantsOneProductEquation.Equation_2N2_O2_2N2O;
-import edu.colorado.phet.balancingchemicalequations.model.TwoReactantsOneProductEquation.Equation_C2H2_2H2_C2H6;
-import edu.colorado.phet.balancingchemicalequations.model.TwoReactantsOneProductEquation.Equation_CH2O_H2_CH3OH;
-import edu.colorado.phet.balancingchemicalequations.model.TwoReactantsOneProductEquation.Equation_C_2S_CS2;
-import edu.colorado.phet.balancingchemicalequations.model.TwoReactantsOneProductEquation.Equation_C_O2_CO2;
-import edu.colorado.phet.balancingchemicalequations.model.TwoReactantsOneProductEquation.Equation_H2_F2_2HF;
-import edu.colorado.phet.balancingchemicalequations.model.TwoReactantsOneProductEquation.Equation_P4_6F2_4PF3;
-import edu.colorado.phet.balancingchemicalequations.model.TwoReactantsOneProductEquation.Equation_P4_6H2_4PH3;
+import edu.colorado.phet.balancingchemicalequations.model.SynthesisEquation.Equation_2C_O2_2CO;
+import edu.colorado.phet.balancingchemicalequations.model.SynthesisEquation.Equation_2H2_O2_2H2O;
+import edu.colorado.phet.balancingchemicalequations.model.SynthesisEquation.Equation_2N2_O2_2N2O;
+import edu.colorado.phet.balancingchemicalequations.model.SynthesisEquation.Equation_C2H2_2H2_C2H6;
+import edu.colorado.phet.balancingchemicalequations.model.SynthesisEquation.Equation_CH2O_H2_CH3OH;
+import edu.colorado.phet.balancingchemicalequations.model.SynthesisEquation.Equation_C_2S_CS2;
+import edu.colorado.phet.balancingchemicalequations.model.SynthesisEquation.Equation_C_O2_CO2;
+import edu.colorado.phet.balancingchemicalequations.model.SynthesisEquation.Equation_H2_F2_2HF;
+import edu.colorado.phet.balancingchemicalequations.model.SynthesisEquation.Equation_P4_6F2_4PF3;
+import edu.colorado.phet.balancingchemicalequations.model.SynthesisEquation.Equation_P4_6H2_4PH3;
 import edu.colorado.phet.balancingchemicalequations.model.TwoReactantsTwoProductsEquation.Equation_2C2H2_5O2_4CO2_2H2O;
 import edu.colorado.phet.balancingchemicalequations.model.TwoReactantsTwoProductsEquation.Equation_2C2H6_7O2_4CO2_6H2O;
 import edu.colorado.phet.balancingchemicalequations.model.TwoReactantsTwoProductsEquation.Equation_2C_2H2O_CH4_CO2;
