@@ -6,7 +6,7 @@ import java.util.ArrayList;
 
 import edu.colorado.phet.balancingchemicalequations.model.Equation;
 import edu.colorado.phet.balancingchemicalequations.model.DecompositionEquation.Equation_2H2O_2H2_O2;
-import edu.colorado.phet.balancingchemicalequations.model.TwoReactantsOneProductEquation.Equation_N2_3H2_2NH3;
+import edu.colorado.phet.balancingchemicalequations.model.SynthesisEquation.Equation_N2_3H2_2NH3;
 import edu.colorado.phet.balancingchemicalequations.model.TwoReactantsTwoProductsEquation.Equation_CH4_2O2_CO2_2H2O;
 import edu.colorado.phet.common.phetcommon.model.Property;
 import edu.colorado.phet.common.phetcommon.util.IntegerRange;
